# agentdid

./: .gitignore  Dockerfile  README.md  alembic.ini  fly.toml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
docs/superpowers/plans/: 2026-04-02-agentproof-mvp.md
docs/superpowers/specs/: 2026-04-02-agentproof-mvp-design.md
src/agentdid/: __init__.py
src/agentdid/api/: app.py  deps.py
src/agentdid/api/routes/: credential.py  email.py  manage.py  register.py  verify.py  well_known.py
src/agentdid/cli/: credential.py  email.py  keygen.py  main.py  register.py  revoke.py  verify.py
src/agentdid/core/: config.py  credentials.py  crypto.py
src/agentdid/db/: session.py
src/agentproof/: __init__.py
src/agentproof/api/: app.py  deps.py
src/agentproof/api/routes/: credential.py  email.py  manage.py  register.py  verify.py  well_known.py
src/agentproof/cli/: credential.py  email.py  keygen.py  main.py  register.py  revoke.py  verify.py
src/agentproof/core/: config.py  credentials.py  did.py
src/agentproof/db/: models.py  session.py
tests/: conftest.py  test_models.py
tests/api/: conftest.py  test_credential.py  test_email.py  test_health.py  test_integration.py  test_manage.py  test_register.py  test_verify.py  test_well_known.py
tests/cli/: test_credential.py  test_email.py  test_keygen.py  test_register.py  test_revoke.py  test_verify.py
tests/core/: test_credentials.py  test_crypto.py  test_did.py
