[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentproof"
version = "0.1.0"
description = "Cryptographic proof that a human stands behind an AI agent."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "pynacl>=1.5.0",
    "pyjwt>=2.9.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "resend>=2.0.0",
    "pydantic-settings>=2.0.0",
    "base58>=2.1.0",
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "aiosqlite>=0.20.0",
]

[project.scripts]
agentproof = "agentproof.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agentproof"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
