[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentproof"
version = "0.1.0"
description = "Cryptographic proof that a human stands behind an AI agent."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "fastapi~=0.135.3",
    "uvicorn[standard]~=0.42.0",
    "sqlalchemy[asyncio]~=2.0.48",
    "asyncpg~=0.31.0",
    "alembic~=1.18.4",
    "pynacl~=1.6.2",
    "pyjwt~=2.12.1",
    "cryptography~=46.0.6",
    "click~=8.3.1",
    "httpx~=0.28.1",
    "resend~=2.27.0",
    "pydantic-settings~=2.13.1",
    "base58~=2.1.1",
    "tomli-w~=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=9.0.2",
    "pytest-asyncio~=1.3.0",
    "pytest-cov~=7.1.0",
    "aiosqlite~=0.22.1",
]

[project.scripts]
agentproof = "agentproof.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/agentproof"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
